# RLQuadcopterControl

./: .gitignore  02_only1.pth  convert_onnx.py  environment.yml  gen_ppo.pth
models/: EpisodeV.onnx  test_rigour_1.onnx  test_rigour_2.onnx
src/: plot.py
src/custom_msgs/: CMakeLists.txt  asmc_ros2.py  dds_info_pub.py  debug_pub.py  drone_controller.py  harddds_asmc_quadrotor.py  inf_shape_traj.py  inf_traj.py  new_inf_shape_traj.py  package.xml  random_traj_generator.py  s_shape_traj.py  semi_traj.py  state_info_pub.py
src/custom_msgs/data/: dataset_merge.py  debug_grapgen.py  hard_dataset_merge.py
src/custom_msgs/dataset_drone_error_hard/: data_hover_error_hard.csv
src/custom_msgs/dataset_drone_hard/: data_inf_hard.csv
src/custom_msgs/msg/: DebugInfo.msg  StateInfo.msg
src/drone_test_cpp/: CMakeLists.txt  package.xml
src/drone_test_cpp/include/drone_test_cpp/: model.hpp  vehicle.hpp
src/drone_test_cpp/src/: model.cpp  test_dron_node.cpp  vehicle.cpp
src/test_drone/: package.xml  setup.cfg  setup.py
src/test_drone/scripts/: allocation_tetst.py  model.py  offboard_example.py  rot_test.ipynb  rot_test.py  test_drone.py  test_rotation.py  transform.py  transform2.py  transform_test.py  vehicle.py
src/test_drone/scripts/DeployHardware/: drone_control.py  drone_control_unnormalized.py  model.py  vehicle.py
src/test_drone/test urdfs/: model.sdf  motor.sdf
